Fix [Pagination] blank white space around page numbers

--- a/src/common/Pagination/pagination.scss
+++ b/src/common/Pagination/pagination.scss
@@ -26,7 +26,9 @@
 
   .pagination-pages {
     display: flex;
+    align-items: center;
     justify-content: center;
+    margin: 0 5px;
   }
 
   .pagination-btn {
@@ -36,7 +38,7 @@
     display: flex;
     justify-content: center;
     border: none;
-    padding: 4px 5px;
+    padding: 4px 8px;
     margin: 0 2px;
     font-size: 14px;
     font-weight: normal;
@@ -56,7 +58,6 @@
     }
 
     .pagination-page-number {
-      padding: 2px 3px;
       box-sizing: content-box;
       border-bottom: 2px solid transparent;
       border-top: 2px solid transparent;
